tests/ui/const-generics/generic_const_exprs/bad-defaults-for-generic-param-in-binder-123629.stderr
error[E0425]: cannot find value `u` in this scope
  --> $DIR/bad-defaults-for-generic-param-in-binder-123629.rs:5:36
   |
LL |     for<const N: usize = { assert!(u) }> ():,
   |                                    ^ not found in this scope

error[E0658]: only lifetime parameters can be used in this context
  --> $DIR/bad-defaults-for-generic-param-in-binder-123629.rs:5:15
   |
LL |     for<const N: usize = { assert!(u) }> ():,
   |               ^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = help: add `#![feature(non_lifetime_binders)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: defaults for generic parameters are not allowed in `for<...>` binders
  --> $DIR/bad-defaults-for-generic-param-in-binder-123629.rs:5:9
   |
LL |     for<const N: usize = { assert!(u) }> ():,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0425, E0658.
For more information about an error, try `rustc --explain E0425`.
